-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0 FF
-
None
-
434e19bed (dev), 522b1dfc8 (6.5)
Found while writing an autotest for QTBUG-103811:
4 qAbort qglobal.cpp 161
5 qt_message_fatal qlogging.cpp 2041
6 QMessageLogger::fatal qlogging.cpp 930
7 qt_assert qassert.cpp 68
8 QQuickDrawer::qt_static_metacall moc_qquickdrawer_p.cpp 233
9 QQmlPropertyData::readPropertyWithArgs qqmlpropertydata_p.h 328
10 QQmlPropertyPrivate::readValueProperty qqmlproperty.cpp 1173
11 QQmlProperty::read qqmlproperty.cpp 1080
12 QQuickStateAction::QQuickStateAction qquickstate.cpp 32
13 prepareTransition qquickdrawer.cpp 568
14 QQuickDrawerPrivate::prepareExitTransition qquickdrawer.cpp 582
15 QQuickPopupTransitionManager::transitionExit qquickpopup.cpp 868
16 QQuickPopup::setVisible qquickpopup.cpp 1968
17 QQuickPopup::close qquickpopup.cpp 937
18 QQuickPopup::setParentItem qquickpopup.cpp 1676
19 QQuickPopup::~QQuickPopup qquickpopup.cpp 902
20 QQuickDrawer::~QQuickDrawer qquickdrawer_p.h 24
21 QQmlPrivate::QQmlElement<QQuickDrawer>::~QQmlElement qqmlprivate.h 99
22 QQmlPrivate::QQmlElement<QQuickDrawer>::~QQmlElement qqmlprivate.h 99
23 QObjectPrivate::deleteChildren qobject.cpp 2161
24 QObject::~QObject qobject.cpp 1099
25 QQuickItem::~QQuickItem qquickitem.cpp 2370
26 QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement qqmlprivate.h 99
27 QQmlPrivate::QQmlElement<QQuickItem>::~QQmlElement qqmlprivate.h 99
28 QQuickView::~QQuickView qquickview.cpp 175
29 tst_QQuickDrawer::touchOutsideOverlay tst_qquickdrawer.cpp 1436
30 tst_QQuickDrawer::qt_static_metacall tst_qquickdrawer.moc 417
31 QMetaMethodInvoker::invokeImpl qmetaobject.cpp 2702
32 QMetaMethod::invokeImpl qmetaobject.cpp 2541
33 QMetaMethod::invoke<>(QObject *, Qt::ConnectionType, QMetaMeth qmetaobject.h 148
34 QMetaMethod::invoke<>(QObject *, Qt::ConnectionType) const qmetaobject.h 160
35 QTest::TestMethods::invokeTestOnData qtestcase.cpp 1134
36 QTest::TestMethods::invokeTest qtestcase.cpp 1408
37 QTest::TestMethods::invokeTests qtestcase.cpp 1734
38 QTest::qRun qtestcase.cpp 2347
39 runTests qtest_quickcontrols_p.h 51
40 main tst_qquickdrawer.cpp 1438
- relates to
-
QTBUG-109459 call to QQuickPopup::setVisible() from dtor bypasses virtual dispatch (ToolTip)
-
- Reported
-
- resulted in
-
QTBUG-117831 [REG: 6.5.2->6.5.3] Destroying active popup with dim layer leaves the dimming layer behind
-
- Closed
-
| For Gerrit Dashboard: QTBUG-109464 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 449239,3 | Drawer: don't close during destructor | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 486604,3 | Drawer: don't close during destructor | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |