Drawer: don't close during destructor

This animation is pointless and can cause a crash.

Fixes: QTBUG-109464
Change-Id: Iffd41b2a5e205afda3295c15a2040becdcf7c96b
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 434e19bede219c51af1213f2fc56bf2d6367e52e)