src/quicktemplates/qquickpopup_p_p.h
@@ -153,6 +153,7 @@ public:
     bool hasClosePolicy = false;
     bool outsidePressed = false;
     bool outsideParentPressed = false;
+    bool inDestructor = false;
     int touchId = -1;
     qreal x = 0;
     qreal y = 0;
